fix text overlap in recon (#6146)

--- a/respond-shared/app/styles/respond-shared/components/_events-list-row.scss
+++ b/respond-shared/app/styles/respond-shared/components/_events-list-row.scss
@@ -87,10 +87,10 @@
     text-decoration-style: dashed;
   }
   .events-list-generic-header .row .column.verbose {
-    flex: 0 0 5%;
+    flex: 0 0 auto;
   }
   .events-list-generic-header .row .column.hash {
-    flex: 0 1 26%;
+    flex: 0 1 25%;
   }
   .events-list-endpoint-header .row .column.verbose {
     flex: 0 0 auto;
@@ -139,9 +139,5 @@
         }
       }
     }
-  }
-
-  .events-list-generic-header .row .column {
-    flex-basis: 1%;
   }
 }
